--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,8 +26,15 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
+main {
+  height: 100vh;
+}
+
 body {
   margin: 0;
+  height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
