[FE] feat: multiple connection

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,42 @@
     transform: rotate(360deg);
   }
 }
+
+#chat .message {
+  padding: 20px;
+  color: #fff;
+  line-height: 25px;
+  /* max-width:90%; */
+  display: inline-block;
+  text-align: left;
+  border-radius: 5px;
+}
+
+#chat .me {
+  text-align: right;
+}
+
+#chat .you .message {
+  background-color: #58b666;
+}
+
+#chat .me .message {
+  background-color: #6fbced;
+}
+
+#chat .triangle {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 10px 10px 10px;
+}
+
+#chat .you .triangle {
+  border-color: transparent transparent #58b666 transparent;
+  margin-left: 15px;
+}
+
+#chat .me .triangle {
+  border-color: transparent transparent #6fbced transparent;
+  /* margin-left:375px; */
+}
