--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -68,6 +68,11 @@ main {
   height: 100vh;
 }
 
+main {
+  position: fixed;
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   height: 100vh;
@@ -76,6 +81,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+  height: 100%;
 }
 
 code {
