--- a/frontend/src/UI/three/test.css
+++ b/frontend/src/UI/three/test.css
@@ -15,8 +15,12 @@ body::-webkit-scrollbar {
 }
 
 .page__container {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
+  width: 576px;
+  height: 600px;
+  transform: scale(0.25);
+  transform-origin: top left;
 }
 
 .page__wrapper {
