--- a/frontend/src/UI/three/minesweeper/Game/style.css
+++ b/frontend/src/UI/three/minesweeper/Game/style.css
@@ -1,5 +1,10 @@
 .game {
-  height: 200 vh;
-  overflow: hidden;
+  /* height: 100%; */
+  height: 596px;
+  width: 564px;
+  transform: scale(0.5);
+  transform-origin: top left;
+
+  /* overflow: hidden; */
   margin: 0 auto;
 }
