--- a/frontend/src/UI/three/test.css
+++ b/frontend/src/UI/three/test.css
@@ -17,10 +17,11 @@ body::-webkit-scrollbar {
 .page__container {
   /* width: 100%;
   height: 100%; */
-  width: 576px;
-  height: 600px;
+  width: 584px;
+  height: 580px;
   transform: scale(0.25);
   transform-origin: top left;
+  border-radius: 10px;
 }
 
 .page__wrapper {
@@ -40,6 +41,7 @@ body::-webkit-scrollbar {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  border-radius: 16px;
 }
 
 .page__text {
