[FE] settings: add font, update chakra ver

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,6 +16,14 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "LeeSeoyun";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2202-2@1.0/LeeSeoyun.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 /* travel font */
 @import url(//fonts.googleapis.com/earlyaccess/jejugothic.css);
 
