--- a/frontend/src/UI/three/members.css
+++ b/frontend/src/UI/three/members.css
@@ -15,8 +15,11 @@ body::-webkit-scrollbar {
 }
 
 .page__container {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
+  width: 584px;
+  height: 580px;
+
   /* width: 584px;
   height: 580px;
   transform: scale(0.25);
@@ -51,12 +54,18 @@ body::-webkit-scrollbar {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin-bottom: 1rem;
+}
+
+.page__image {
+  width: 100%;
+  height: 100%;
 }
 
 .page__text h1 {
   width: 100%;
   text-align: center;
-  font-size: 3rem;
+  font-size: 2rem;
   text-transform: uppercase;
 }
 
@@ -82,9 +91,9 @@ body::-webkit-scrollbar {
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
-  width: 300px;
-  margin-right: 2rem;
-  margin-left: 2rem;
+  /* width: 300px; */
+  margin-right: 1rem;
+  margin-left: 1rem;
 }
 
 /* .page__text button:hover {
