[FE] settings: delete useless files, access authorization

--- a/frontend/src/UI/three/members.css
+++ b/frontend/src/UI/three/members.css
@@ -19,6 +19,8 @@ body::-webkit-scrollbar {
   height: 100%; */
   width: 584px;
   height: 580px;
+  /* transform: scale(0.25);
+  transform-origin: top left; */
 
   /* width: 584px;
   height: 580px;
