--- a/frontend/src/UI/three/minesweeper/Board/style.css
+++ b/frontend/src/UI/three/minesweeper/Board/style.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  /* height: 100vh; */
 }
 
 .grid {
@@ -14,7 +13,6 @@
 
 .mines-count {
   padding: 5px 10px;
-  margin-top: 20px;
   font-weight: 400;
   color: white;
   border-radius: 5px;
@@ -22,6 +20,7 @@
   text-align: center;
   justify-content: center;
   background-color: #cec075;
+  font-size: large;
 }
 
 .row {
